# semantic_analyzer

./: .gitignore  README.md  pyproject.toml  texts.toml
semantic_analyzer/: __init__.py
semantic_analyzer/analysis/: __init__.py  paragraph_analysis.py  sentence_analysis.py  text_analysis.py  word_analysis.py
semantic_analyzer/cli/: __init__.py  paragraph.py  sentence.py  text.py  word.py
semantic_analyzer/utils/: __init__.py  file_reader.py  models.py  vector_store.py
