[project]
name = "semantic-analyzer"
version = "0.1.0"
description = "A semantic analysis tool for words, sentences, and paragraphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "gensim>=4.3.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "tomli>=2.2.1",
]

[project.scripts]
semantic-analyzer = "semantic_analyzer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_analyzer"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
